--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "leetcode_rs"
-version = "0.1.0"
-authors = ["wzv5 <wzv5@msn.com>"]
-edition = "2018"
+version = "0.2.0"
+authors = []
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
